--- a/src/pages/posts/3-夜爬缙云山.md
+++ b/src/pages/posts/3-夜爬缙云山.md
@@ -2,7 +2,7 @@
 date: 2025/08/13
 ---
 
-<img src="\assets\02\02.JPG" width="800" />
+<img src="\assets\03\03.jpeg" width="800" />
 
 <small>封面图拍摄于上周末神农架神农顶，日落时分天空呈现渐变色，十分漂亮，虽然天气比较冷，但不虚此行！</small>
 
