--- a/src/pages/posts/2-新春佳节.md
+++ b/src/pages/posts/2-新春佳节.md
@@ -2,7 +2,7 @@
 date: 2025/01/02
 ---
 
-<img src="\assets\02\02.JPG" width="800" />
+<img src="\assets\02\02.jpg" width="800" />
 
 <small>封面图拍摄于上周末神农架神农顶，日落时分天空呈现渐变色，十分漂亮，虽然天气比较冷，但不虚此行！</small>
 
